--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -60,7 +60,7 @@
                     <h3 style="font-weight:300 !important">DHDK<b>ey!</b></h3>
                     <h5 style="font-weight:300 !important"><a href="{{ url_for('info') }}" class="text-secondary">Info</a></h5>
                     <h5 style="font-weight:300 !important"><a href="{{ url_for('privacy') }}" class="text-secondary">Privacy Policy</a></h5>
-                    <h5 style="font-weight:300 !important"><a href="https://github.com/" class="text-secondary" target="_blank">Documentation <i class="fas fa-external-link-alt fa-xs"></i></a></h5>
+                    <h5 style="font-weight:300 !important"><a href="https://github.com/dharc-org/dhdkey/blob/master/README.md" class="text-secondary" target="_blank">Documentation <i class="fas fa-external-link-alt fa-xs"></i></a></h5>
                 </div>
                 <div class="col-md-7">
                     <h4 style="font-weight:300 !important">/DH.Arc - Digital Humanities Advanced Research Centre</h4>
