--- a/app/templates/documents/info.html
+++ b/app/templates/documents/info.html
@@ -41,8 +41,8 @@
     <div class="mb-4">
             <p><span class="text-secondary">Github Repository</span>
             <br>
-                <a rel="license" target="_blank" href="https://github.com/"><i class="fab fa-sm fa-github"></i>
-               https://github.com/</a>
+                <a rel="license" target="_blank" href="https://github.com/dharc-org/dhdkey"><i class="fab fa-sm fa-github"></i>
+                        https://github.com/dharc-org/dhdkey</a>
                 </p>
     </div>
     <div class="mb-4">
