--- a/app/templates/documents/info.html
+++ b/app/templates/documents/info.html
@@ -14,7 +14,7 @@
     </div>
     <div class="mb-4">
             <span class="text-secondary"span>Supervised by</span>
-            <p><a href="https://www.unibo.it/sitoweb/francesca.tomasi" target="_blank">Francesca Tomasi</a> and <a href="https://www.unibo.it/sitoweb/silvio.peroni" target="_blank">Silvio Peroni</a></p>
+            <p><a href="https://www.unibo.it/sitoweb/silvio.peroni" target="_blank">Silvio Peroni</a> and <a href="https://www.unibo.it/sitoweb/francesca.tomasi" target="_blank">Francesca Tomasi</a></p>
     </div>
     <div class="mb-4">
             <span class="text-secondary">Date</span>
