--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -5,7 +5,7 @@
     </div>
     <div class= "col-md-6 col-xl-4" style="margin-top: 35px; text-align: center; min-height:100%">
             <h1>Admin Reserved Area</h1>
-            <form id="projform" autocomplete="off" action="/admin" method="POST">
+            <form id="projform" autocomplete="off" action="{{ url_for('admin') }}" method="POST">
                 <div class="form-label-group">
                     <label for="inputEmail">Admin Username</label>
                     <input type="text" id="inputEmail" class="form-control" name="username" placeholder="Username" required autofocus>
