--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -50,3 +50,20 @@
     border-radius: 50%;
     line-height: 120px;
 }
+
+.proj-item{
+    padding-top: .75rem;
+    padding-bottom: .75rem;
+    padding-right: 3rem;
+    padding-left: 3rem;
+    vertical-align: top;
+    border-top: 1px solid #dee2e6;
+}
+@media (max-width: 480px) {
+    .proj-item{
+        padding: 1.5rem;
+    }
+}
+
+
+.proj-item:nth-of-type(odd) {background: rgba(0,0,0,.05);}
