--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,7 +10,7 @@
             <h1 class="display-4">DHDK<b>ey!</b></h1>
             <h4 class="lead" style="font-variant: small-caps">Digital Humanities & Digital Knowledge Educational Yearbook</h4>
             <hr class="my-4">
-            <p class="lead">Explore students' projects from the <a class="text-danger" href="https://corsi.unibo.it/2cycle/DigitalHumanitiesKnowledge">Digital Humanities & Digital Knowledge course at the University of Bologna</a>.</p>
+            <p class="lead">Explore students' projects from the <b><a class="text-info" href="https://corsi.unibo.it/2cycle/DigitalHumanitiesKnowledge">Digital Humanities & Digital Knowledge course at the University of Bologna</a></b>.</p>
 
         </div>
     </div>
@@ -18,7 +18,7 @@
         <div class="col-sm-10 mx-auto">
             <div class="row text-center mt-n5">
                 <div class="col-sm pb-2">
-                    <div class="card h-100 shadow">
+                    <div class="card shadow">
                         <div class="card-body d-flex flex-column align-items-center">
                             <i class="fas fa-book-open fa-5x bg-info text-white icon-circular shadow"></i>
                             <a href="{{ url_for('projects') }}" class="btn btn-info mt-3">Browse Projects</a>
@@ -26,7 +26,7 @@
                     </div>
                 </div>
                 <div class="col-sm pb-2">
-                    <div class="card h-100 shadow">
+                    <div class="card shadow">
                         <div class="card-body d-flex flex-column align-items-center">
                             <i class="fas fa-arrow-up fa-5x bg-info text-white icon-circular shadow"></i>
                             <a href="{{ url_for('upload') }}" class="btn btn-info mt-3">Upload New Project</a>
@@ -34,7 +34,7 @@
                     </div>
                 </div>
                 <div class="col-sm pb-2">
-                    <div class="card h-100 shadow">
+                    <div class="card shadow">
                         <div class="card-body d-flex flex-column align-items-center">
                             <i class="fas fa-info fa-5x bg-info text-white icon-circular shadow"></i>
                             <a href="{{ url_for('info') }}" class="btn btn-info mt-3">Info</a>
