--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -4,7 +4,7 @@
 
     <div class= "col-md-8 col-xl-5 text-center mx-auto" style="margin-top: 35px"> 
         <h2 style="margin-bottom: 30px">Upload New Project!</h2>
-        <form id="projform" autocomplete="off" action="/upload" method="POST">
+        <form id="projform" autocomplete="off" action="{{ url_for('upload') }}" method="POST">
             
             <!--TITLE-->
             <div class="form-group">
@@ -30,30 +30,30 @@
             <div class="card p-3 mb-3">
                     <label>Authors</label>
                 <div id="author-container"> 
-                        <div class="form-group author-fields card bg-light p-3 author-item" id="item-0">
+                        <div class="form-group author-fields card bg-light p-3 author-item  text-left text-sm-center" id="item-0">
                             <div class="row">
                                 <div class="col-12 authorname">
-                                    <div class="row">
-                                        <label for="Aut[0][Name]" class="col-4 col-form-label pl-0 pr-0">Author Name</label>
-                                        <div class="col-8">
+                                    <div class="row mb-2">
+                                        <label for="Aut[0][Name]" class="col-sm-4 col-form-label">Author Name</label>
+                                        <div class="col-sm-8">
                                                 <input type="text" class="form-control" id="Aut[0][Name]"  name="Aut[0][Name]"  required="true" placeholder="Enter Author&#39;s Name">
                                             </div>
                                     </div>
-                                    <div class="row">
-                                            <label for="Aut[0][Surname]"  class="col-4 col-form-label pl-0 pr-0">Author Surname</label>
-                                            <div class="col-8">
+                                    <div class="row mb-2">
+                                            <label for="Aut[0][Surname]"  class="col-sm-4 col-form-label">Author Surname</label>
+                                            <div class="col-sm-8">
                                                     <input type="text" class="form-control" id="Aut[0][Surname]"  name="Aut[0][Surname]"  required="true" placeholder="Enter Author&#39;s Surname">
                                                 </div>
                                         </div>
                                     <div class="row">
-                                            <label for="Aut[0][Mail]"  class="col-4 col-form-label pl-0 pr-0">UniboMail</label>
-                                            <div class="col-8">
+                                            <label for="Aut[0][Mail]"  class="col-sm-4 col-form-label">UniboMail</label>
+                                            <div class="col-sm-8">
                                                 <input type="mail" class="form-control" id="Aut[0][Mail]" name="Aut[0][Mail]" pattern="^[a-zA-Z0-9_.+-]+@(?:(?:[a-zA-Z0-9-]+\.)?[a-zA-Z]+\.)?(unibo|studio.unibo)\.it$" placeholder="Enter Author&#39;s Unibo Mail" title="Only Unibo Mail accepted (@unibo.it or @studio.unibo.it)" required="true">
                                             </div>
                                         </div>
                                 </div>
-                                <div class="col-0 pr-0 authordisable">
-                                    <button type="button" class="btn btn-danger delete d-none" for="item-0">
+                                <div class="col-0 authordisable">
+                                    <button type="button" class="btn btn-danger btn-sm delete d-none" for="item-0">
                                         <span aria-hidden="true">&times;</span>
                                     </button>
                                 </div>
@@ -65,7 +65,7 @@
 
             <!--YEAR-->
             <div class="form-group">
-                <label for="Year">Course's Academic Year</label>
+                <label for="Year">Course Academic Year</label>
                 <select class="form-control" id="Year" name="Year" required="true">
                     <option value="" selected>Choose...</option>
                 </select>
@@ -74,6 +74,7 @@
             <!--COURSE-->
             <div class="form-group">
             <label for="Course">Course Title</label>
+            <small>(Select Course Academic Year first)</small>
             <select class="form-control" id="Course" name="Course" disabled required="true">
                     <option value="" selected>Choose...</option>
             </select>
@@ -94,18 +95,17 @@
                 </div>
 
             <!--privacy-->
-            <div class="form-group custom-checkbox my-5">
+            <div class="form-group my-5">
+                    <label class="custom-control custom-checkbox">
                     <input type="checkbox" class="custom-control-input" id="privacy" required>
-                    <label class="custom-control-label" for="privacy">I agree to the <a target="_blank" href="{{ url_for('privacy') }}">Privacy Policy & Terms of Service</a>
+                    <label class="custom-control-label" for="privacy">I agree to the <a target="_blank" href="{{ url_for('privacy') }}">Privacy Policy & Terms of Service</a></label>
                     </label>
                   </div>
 
             <!--Captcha-->
-             <!--<div class="form-group">
-                    <div class="g-recaptcha" data-sitekey="TODO at https://www.google.com/recaptcha/intro/v3.html" data-callback="verifyRecaptchaCallback" data-expired-callback="expiredRecaptchaCallback"></div>
-                    <input class="form-control d-none" data-recaptcha="true" required data-error="Please complete the Captcha">
-                    <div class="help-block with-errors"></div>
-                </div>-->
+             <div class="form-group d-flex justify-content-center mb-5">
+                    <div class="g-recaptcha" data-sitekey="6LdawPwUAAAAAPUu2tYQgFlUWEUsdGwVlGigdEqC"></div>
+                </div>
 
 
             <button type="submit" class="btn btn-primary">Submit</button>
@@ -129,39 +129,40 @@ $(document).ready(function () {
         e.preventDefault();
         next = next + 1;
         $(".delete").removeClass("d-none")
-        $(".authordisable").addClass("col-2")
+        $(".authordisable").addClass("col-2 pr-0")
         $(".authordisable").removeClass("col-0")
-        $(".authorname").addClass("col-10")
+        $(".authorname").addClass("col-10 pr-0")
         $(".authorname").removeClass("col-12")
-        var template = ' <div class="form-group author-fields card bg-light p-3 author-item" id="item-' + next + '">\
-                <div class="row">\
-                    <div class="col-10 authorname">\
-                        <div class="row">\
-                            <label for="Aut[' + next + '][Name]" class="col-4 col-form-label pl-0 pr-0">Author Name</label>\
-                            <div class="col-8">\
-                                    <input type="text" class="form-control" id="Aut[' + next + '][Name]" name="Aut[' + next + '][Name]" required="true" placeholder="Enter Author&#39;s Name">\
-                                </div>\
-                        </div>\
-                        <div class="row">\
-                                <label for="Aut[' + next + '][Surname]" class="col-4 col-form-label pl-0 pr-0">Author Surname</label>\
-                                <div class="col-8">\
-                                        <input type="text" class="form-control" id="Aut[' + next + '][Surname]" name="Aut[' + next + '][Surname]" required="true" placeholder="Enter Author&#39;s Surname">\
+        var template = '<div class="form-group author-fields card bg-light p-3 author-item  text-left text-sm-center" id="item-' + next + '">\
+                            <div class="row">\
+                                <div class="col-10 pr-0 authorname">\
+                                    <div class="row mb-2">\
+                                        <label for="Aut[' + next + '][Name]" class="col-sm-4 col-form-label">Author Name</label>\
+                                        <div class="col-sm-8">\
+                                                <input type="text" class="form-control" id="Aut[' + next + '][Name]"  name="Aut[' + next + '][Name]"  required="true" placeholder="Enter Author&#39;s Name">\
+                                            </div>\
                                     </div>\
-                            </div>\
-                        <div class="row">\
-                                <label for="Aut[' + next + '][Mail]" class="col-4 col-form-label pl-0 pr-0">UniboMail</label>\
-                                <div class="col-8">\
-                                    <input type="mail" class="form-control" id="Aut[' + next + '][Mail]" name="Aut[' + next + '][Mail]" pattern="^[a-zA-Z0-9_.+-]+@(?:(?:[a-zA-Z0-9-]+\.)?[a-zA-Z]+\.)?(unibo|studio.unibo)\.it$" placeholder="Enter Author&#39;s Unibo Mail" title="Only Unibo Mail accepted (@unibo.it or @studio.unibo.it)" required="true">\
+                                    <div class="row mb-2">\
+                                            <label for="Aut[' + next + '][Surname]"  class="col-sm-4 col-form-label">Author Surname</label>\
+                                            <div class="col-sm-8">\
+                                                    <input type="text" class="form-control" id="Aut[' + next + '][Surname]"  name="Aut[' + next + '][Surname]"  required="true" placeholder="Enter Author&#39;s Surname">\
+                                                </div>\
+                                        </div>\
+                                    <div class="row">\
+                                            <label for="Aut[' + next + '][Mail]"  class="col-sm-4 col-form-label">UniboMail</label>\
+                                            <div class="col-sm-8">\
+                                                <input type="mail" class="form-control" id="Aut[' + next + '][Mail]" name="Aut[' + next + '][Mail]" pattern="^[a-zA-Z0-9_.+-]+@(?:(?:[a-zA-Z0-9-]+\.)?[a-zA-Z]+\.)?(unibo|studio.unibo)\.it$" placeholder="Enter Author&#39;s Unibo Mail" title="Only Unibo Mail accepted (@unibo.it or @studio.unibo.it)" required="true">\
+                                            </div>\
+                                        </div>\
+                                </div>\
+                                <div class="col-2 pr-0 authordisable">\
+                                    <button type="button" class="btn btn-danger btn-sm delete" for="item-' + next + '">\
+                                        <span aria-hidden="true">&times;</span>\
+                                    </button>\
                                 </div>\
                             </div>\
-                    </div>\
-                    <div class="col-2 pr-0 authordisable">\
-                        <button type="button" class="btn btn-danger delete" for="item-' + next + '">\
-                            <span aria-hidden="true">&times;</span>\
-                        </button>\
-                    </div>\
-                </div>\
-            </div>'
+                        </div>'
+        
 
         $('#author-container').append(template);
         len = $('.author-item').length;            
@@ -172,9 +173,9 @@ $(document).ready(function () {
             len = $('.author-item').length;
             if (len === 1){
                 $(".delete").addClass("d-none")
-                $(".authordisable").removeClass("col-2")
+                $(".authordisable").removeClass("col-2 pr-0")
                 $(".authordisable").addClass("col-0")
-                $(".authorname").removeClass("col-10")
+                $(".authorname").removeClass("col-10 pr-0")
                 $(".authorname").addClass("col-12")
             }
         });
