--- a/app/templates/confirmation_form.html
+++ b/app/templates/confirmation_form.html
@@ -16,7 +16,7 @@
                 </li>
                 {% endfor %}
                 <li><b>Description:</b> {{ data["Description"]}}</li>
-                <li><b>Github DH.arc Repository:</b> <a target="_blank" href='{{ data["Repository"]}}'>{{ data["Repository"]}} <i class="fas fa-external-link-alt fa-xs"></i></a></li>
+                <li><b>Github<!-- DH.arc--> Repository:</b> <a target="_blank" href='{{ data["Repository"]}}'>{{ data["Repository"]}} <i class="fas fa-external-link-alt fa-xs"></i></a></li>
                 {% if data["Homepage"] %}<li><b>Homepage:</b> <a target="_blank" href='{{ data["Homepage"]}}'>{{ data["Homepage"]}} <i class="fas fa-external-link-alt fa-xs"></i></a></li>{% endif %}
                 <li><b>Course:</b> <a target="_blank" href='{{ data["Course_url"]}}'>{{ data["Course"]}} <i class="fas fa-external-link-alt fa-xs"></i></a></li>
                 <li><b>Course's Academic Year:</b> {{ data["Year"]}}</li>
