--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -15,7 +15,7 @@
 
             <!--REPOSITORY LINK-->
             <div class="form-group">
-                <label for="Repository">Project Github DH.arc Repository</label>
+                <label for="Repository">Project Github<!-- DH.arc--> Repository</label>
                 <input type="url" class="form-control" id="Repository" name="Repository" placeholder="www.example.com" required="true">
               </div>
             
@@ -102,10 +102,10 @@
                     </label>
                   </div>
 
-            <!--Captcha-->
+            <!--Captcha
              <div class="form-group d-flex justify-content-center mb-5">
-                    <div class="g-recaptcha" data-sitekey="6LdawPwUAAAAAPUu2tYQgFlUWEUsdGwVlGigdEqC"></div>
-                </div>
+                    <div class="g-recaptcha" data-sitekey="^^^^^^^^^^^^^^^^^^^^^^^^"></div>
+                </div>-->
 
 
             <button type="submit" class="btn btn-primary">Submit</button>
