--- a/app/templates/admin/AdminEdit.html
+++ b/app/templates/admin/AdminEdit.html
@@ -17,6 +17,7 @@
          <!-- div for pagination block -->
                <div class="pagination-bar  float-right">
                  <paginate
+                 v-model="page"
                            :page-count="Math.ceil(searchResult.pagination.total / searchResult.pagination.per_page)"
                            :page-range="3"
                            :click-handler="goToPage"
@@ -77,7 +78,7 @@
                  <li v-for="bucket in facet.buckets">
                  <div class="checkbox block" style="margin-top: 0; margin-bottom: 0;">
                    <label>
-                     <input class="checkbox" type="checkbox" v-model="filters[facet.name]" v-bind:value="bucket.key">
+                     <input class="checkbox" @click="goToPage(1)" type="checkbox" v-model="filters[facet.name]" v-bind:value="bucket.key">
                      [[ bucket.key ]] ([[ bucket.doc_count ]]) 
                    </label>
                  </div>
@@ -119,7 +120,7 @@
                         <div   v-if="item.homepage">
                        <a v-bind:href="item.homepage" target="_blank"><i class="fas fa-arrow-alt-circle-right text-primary"></i> [[ item.homepage ]] <i class="fas fa-external-link-alt fa-xs"></i></a>
                         </div>
-                       <a v-bind:href="item.repository" target="_blank"><i class="fab fa-github text-primary"></i> Github DH.arc Repository <i class="fas fa-external-link-alt fa-xs"></i></a>
+                       <a v-bind:href="item.repository" target="_blank"><i class="fab fa-github text-primary"></i> Github<!-- DH.arc--> Repository <i class="fas fa-external-link-alt fa-xs"></i></a>
                       </div>
                       </td>
                       <td>
@@ -156,7 +157,7 @@
     <script>
 
 $( document ).ready(function() {
-rows = JSON.parse('{{ data | tojson | safe}}');
+rows = {{ data | tojson | safe}};
 
 
 
