--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,7 +2,9 @@
     <head>
             <meta name="viewport" content="width=device-width">
             <link rel="icon" href="./static/css/favicon.ico" />
-        {% if title %}
+        {% if title == 'Home' %}
+            <title>Welcome to DHDKey!</title>
+        {% elif title %}
             <title>{{ title }} - DHDKey!
             </title>
         {% else %}
@@ -93,15 +95,15 @@
         </div>
 
 </body>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-167767963-1"></script>
+<!-- Global site tag (gtag.js) - Google Analytics 
+<script async src=^^^^^^^^^^></script>></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-167767963-1');
-</script>
+  gtag('config', '^^^^^^^^^^');
+</script>-->
 
 </html>
 
