--- a/app/templates/documents/privacy.html
+++ b/app/templates/documents/privacy.html
@@ -13,20 +13,27 @@
             <p>The personal information that you are asked to provide, and the reasons why you are asked to provide it, will be made clear to you at the point we ask you to provide your personal information.</p>
             <p>If you contact us directly, we may receive additional information about you such as your name, email address, phone number, the contents of the message and/or attachments you may send us, and any other information you may choose to provide.</p>
             <p>When you upload a new project, we may ask for your contact information, including items such as first name, last name and email address.</p>
+            <p><strong>Cookies</strong></p>
+            <p>To prevent spam and abuse we use "Google reCAPTCHA" on our website. This service is provided by Google Inc., 1600 Amphitheater Parkway, Mountain View, CA 94043, USA ("Google").</p>
+            <p>To do this, reCAPTCHA analyzes the behavior of the website visitor based on various characteristics:</p>
+            <ul>
+                <li>Typing patterns of the user</li>
+                <li>The amount of mouse clicks a user has done on the site or touches on an app</li>
+                <li>What language the user's browser is using</li>
+                <li>Google cookies (Third party cookies)</li>
+                <li>The answers to question fields on the site</li>
+                <li>CSS information</li>
+                <li>Plug-ins installed on the browser</li>
+            </ul>
+            <p>For more information:</p>
+                <ul>
+                    <li><a target="_blank" href="https://www.google.com/intl/de/policies/privacy/">Google Privacy Policy <i class="fas fa-external-link-alt fa-xs"></i></a></li>
+                    <li><a target="_blank" href="https://www.google.com/recaptcha/intro/android.html">Google reCAPTCHA <i class="fas fa-external-link-alt fa-xs"></i></a>.</li>
+                </ul>
             <p><strong>Third Parties Personal Data</strong></p>
             <p>When uploading data for a new project you can upload third party personal data such as first name, last name and email. In doing so you take full responsibility for the disclosure of third party personal data. It is your responsibility to ask permission and to notify the third party of the disclosure of their personal data and to inform them of our Privacy Policy & Terms of Service.</p>
-            <p><strong>How we use your information</strong></p>
-            <p>We use the information we collect in various ways, including to:</p>
-            <ul>
-            <li>Provide, operate, and maintain our website</li>
-            <li>Improve, personalize, and expand our website</li>
-            <li>Understand and analyze how you use our website</li>
-            <li>Develop new services, features, and functionality</li>
-            <li>Send you emails</li>
-            </ul>
+            <p><strong>Terms of Use</strong></p>
             <p>All project data, including author data such as first name, last name and email, are published under a <a  target="_blank" href="https://creativecommons.org/publicdomain/zero/1.0/deed.en">CC-0 license <i class="fas fa-external-link-alt fa-xs"></i></a>.</p>
-            <p><strong>Log Files</strong></p>
-            <p>DHDKey! follows a standard procedure of using log files. These files log visitors when they visit websites. All hosting companies do this and a part of hosting services' analytics. The information collected by log files include internet protocol (IP) addresses, browser type, Internet Service Provider (ISP), date and time stamp, referring/exit pages, and possibly the number of clicks. These are not linked to any information that is personally identifiable. The purpose of the information is for analyzing trends, administering the site and tracking users' movement on the website.</p>
             <p><strong>GDPR Privacy Policy (Data Protection Rights)</strong></p>
             <p>We would like to make sure you are fully aware of all of your data protection rights. Every user is entitled to the following:</p>
             <p>The right to access – You have the right to request copies of your personal data.</p>
