--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -56,8 +56,9 @@
                           <div class="modal-header bg-success justify-content-center">
                                   <i class="fas fa-cloud-upload-alt fa-5x text-light"></i>
                           </div>
-                          <div class="modal-body bg-light">
-                                  <h4 class="text-center">Project Uploaded!</h4>
+                          <div class="text-center modal-body bg-light">
+                                  <h4>Project Uploaded!</h4>
+                            <p>The request is being approved</p>
                             <p>Thank you for your contribution!</p>
                           </div>
                           <div class="modal-footer bg-light  justify-content-center">
