--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -89,8 +89,8 @@
 
             <!--RESPONSIBLE MAIL-->
             <div class="form-group">
-                <label class="mb-0" for="Responsible">Confirmation Mail</label>
-                <small id="ResponsibleHelp" class="form-text text-muted mb-1 mt-0">Email address to which data confirmation form will be sent (24h to confirm)</small>
+                <label class="mb-0" for="Responsible">Contact Mail</label>
+                <!--<small id="ResponsibleHelp" class="form-text text-muted mb-1 mt-0">Email address to which data confirmation form will be sent (24h to confirm)</small>-->
                 <input type="mail" class="form-control" id="Responsible" name="Responsible" pattern="^[a-zA-Z0-9_.+-]+@(?:(?:[a-zA-Z0-9-]+\.)?[a-zA-Z]+\.)?(unibo|studio.unibo)\.it$" placeholder="Enter Unibo Mail" title="Only Unibo Mail accepted (@unibo.it or @studio.unibo.it)" required="true">
                 </div>
 
@@ -102,10 +102,10 @@
                     </label>
                   </div>
 
-            <!--Captcha
+            <!--Captcha-->
              <div class="form-group d-flex justify-content-center mb-5">
-                    <div class="g-recaptcha" data-sitekey="^^^^^^^^^^^^^^^^^^^^^^^^"></div>
-                </div>-->
+                    <div class="g-recaptcha" data-sitekey="6LdawPwUAAAAAPUu2tYQgFlUWEUsdGwVlGigdEqC"></div>
+                </div>
 
 
             <button type="submit" class="btn btn-primary">Submit</button>
