--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -14,10 +14,11 @@
         
     <div id="el" v-cloak style="margin-top: 30px;">
     <div class="row mt-5">
-        <div class="col-md-6">
+        <div class="col-lg-6">
           {% if author %} 
           <h2>{{ name }}</h2> 
-          <h5><a href="mailto:{{ mail }}"><i class="far fa-envelope fa-sm"></i> {{ mail }}</a></h5>
+          <h5  class="d-none d-md-block" style="word-break:break-all;"><a href="mailto:{{ mail }}"  style="word-break:break-all;">{{ mail }}</a></h5>
+          <h6  class="d-block d-md-none"style="word-break:break-all;"><a href="mailto:{{ mail }}"  style="word-break:break-all;">{{ mail }}</a></h6>
             {% else %}
                         <form>
                                 <div class="form-group row">
@@ -34,17 +35,22 @@
                         </form>
               {% endif %}
             </div>
-              <div class="col-md-6">    </div>
+              <div class="col-lg-6">    </div>
     </div>
 
            <button type="button" class="btn-block btn btn-secondary d-block d-sm-block d-md-none text-left mt-3"  data-toggle="modal" data-target="#modal_filter">
-               <i class="fas fa-tasks"></i> <span>Refine Search</span>
+               Refine Search<i class="pt-1 float-right fas fa-tasks"></i>
                  </button>
-                 
+        
+          <div class="d-block d-md-none"  style="margin-top: 20px;">
+            <h5>[[ searchResult.pagination.total ]] Item<span v-if="searchResult.pagination.total != 1">s</span> Found</h5>
+          </div>      
+          
          <div class="row" style="margin-top: 20px;">
              <div class="col-6">
-               <h5>[[ searchResult.pagination.total ]] Item<span v-if="searchResult.pagination.total != 1">s</span> Found</h5>
+               <h5 class="d-none d-md-block">[[ searchResult.pagination.total ]] Item<span v-if="searchResult.pagination.total != 1">s</span> Found</h5>
              </div>
+
          
              <div class="col-6">
          <!-- div for pagination block -->
@@ -87,7 +93,7 @@
                        <li v-for="bucket in facet.buckets">
                        <div class="checkbox block" style="margin-top: 0; margin-bottom: 0;">
                          <label>
-                           <input class="checkbox" type="checkbox" v-model="filters[facet.name]" v-bind:value="bucket.key">
+                           <input class="checkbox"  @click="goToPage(1)" type="checkbox" v-model="filters[facet.name]" v-bind:value="bucket.key">
                            [[ bucket.key ]] ([[ bucket.doc_count ]]) 
                  </label>
                </div>
@@ -144,7 +150,7 @@
                    </div>
                    <div class="mb-3">
                      <div   v-if="item.homepage">
-                    <a v-bind:href="item.homepage" target="_blank"><i class="fas fa-arrow-alt-circle-right"></i> [[ item.homepage ]] <i class="fas fa-external-link-alt fa-xs"></i></a>
+                    <a v-bind:href="item.homepage" target="_blank"><i class="fas fa-arrow-alt-circle-right"></i> Project Website <i class="fas fa-external-link-alt fa-xs"></i></a>
                      </div>
                     <a v-bind:href="item.repository" target="_blank"><i class="fab fa-github"></i> Github<!-- DH.arc--> Repository <i class="fas fa-external-link-alt fa-xs"></i></a>
                    </div>
@@ -156,6 +162,28 @@
      
            <div class="clearfix" style="margin-bottom: 100px;"></div>
          </div>
+
+
+         <div class="pagination-bar  float-right mt-5">
+          <paginate
+                     v-model="page"
+                    :page-count="Math.ceil(searchResult.pagination.total / searchResult.pagination.per_page)"
+                    :page-range="3"
+                    :click-handler="goToPage"
+                    :prev-text="'Prev'"
+                    :next-text="'Next'"
+                    :container-class="'pagination'"
+                    :page-class="'page-item'"
+                    :page-link-class="'page-link'"
+                    :prev-class="'page-item'"
+                    :next-class="'page-item'"
+                    :prev-link-class="'page-link'"
+                    :next-link-class="'page-link'"
+                    :active-class="'active'">
+          </paginate>
+        </div>
+
+
      </div>
     </div>
 
