frontend updates at index

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -27,7 +27,7 @@
     <body class="d-flex flex-column">
                 <div style="min-height: 100vh">
                     <div class="head">
-                            <nav class="navbar navbar-expand navbar-light shadow-sm">
+                            <nav class="navbar navbar-expand navbar-light shadow-sm px-5">
                                     <a class="navbar-brand" style="font-size: 20pt !important; font-weight:200 !important" href="{{ url_for('index') }}">DHDKey</a>
                                     {% if title != "Confirmation" %}
                                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
